# example_python_package

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: run_tests.yml
envs/: dev.yml  prod.yml  test.yml
src/example_python_package/: calculator.py  plotting.py  tables.py
tests/: __init__.py  conftest.py  test_calculator.py  test_plotting.py  test_tables.py
