[project]
name = "example_python_package"
version = "0.0.1"
description = "An example of creating a Python package."
dependencies = [
  "matplotlib==3.9.2",
  "numpy==1.26.4",
  "pandas==2.1.4",
]
requires-python = "== 3.11.9"
authors = [{name="Jon Swain", email="jonswain123@gmail.com"}]
maintainers = [{name="Jon Swain", email="jonswain123@gmail.com"}]
readme = "README.md"

[project.urls]
Repository = "https://github.com/jonswain/example_python_package"
Issues = "https://github.com/jonswain/example_python_package/issues"

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
    ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
example_python_package = ["*.csv"]

[tool.setuptools.packages.find]
where = ["src"]
